Final ADT implementations and benchmark