@@ -22,7 +22,7 @@ public class ArrayListStack<T> implements Stack<T> {
         if (isEmpty()) {
             throw new EmptyStackException();
         }
-        return data.removeLast();
+        return data.remove(data.size() - 1);
     }
 
     @Override
@@ -31,7 +31,7 @@ public class ArrayListStack<T> implements Stack<T> {
         if (isEmpty()) {
             throw new EmptyStackException();
         }
-        return data.getLast();
+        return data.get(data.size() - 1);
     }
 
     @Override
