@@ -1,6 +1,7 @@
 package chapter9;
 
 import java.util.ArrayList;
+import java.util.EmptyStackException;
 
 public class SortedArrayListPriorityQueue<T> implements PriorityQueue<T> {
 
@@ -27,20 +28,32 @@ public class SortedArrayListPriorityQueue<T> implements PriorityQueue<T> {
     @Override
     public void enqueue(int priority, T data) {
         // TODO: insert so list is sorted by priority ASC (lower number is higher priority)
-        list.add(new Entry<>(priority, data));
-        list.sort(null);
+        Entry<T> entry = new Entry<>(priority, data);
+
+        int i = 0;
+        while (i < list.size() && list.get(i).priority <= priority) {
+            i++;
+        }
+
+        list.add(i, entry);
     }
 
     @Override
     public T dequeue() throws Exception {
         // TODO: remove index 0
+        if (isEmpty()) {
+            throw new EmptyStackException();
+        }
         return list.remove(0).data;
     }
 
     @Override
     public T front() throws Exception {
         // TODO: return index 0
-        return list.getFirst().data;
+        if (isEmpty()) {
+            throw new EmptyStackException();
+        }
+        return list.get(0).data;
     }
 
     @Override
